# inari

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Inari/: BaseGame.h
include/Inari/Assets/: AssetsManager.h  Shader.h  Texture2D.h  World.h
include/Inari/Assets/Shaders/: SpriteShader.h
include/Inari/Common/: Color.h  Mat4.h  Math.h  Vec2.h  Vec3.h  Vec4.h  VecTypes.h
include/Inari/ECS/Components/: AnimationSprite.h  RigidBody.h  Sprite.h  Transform.h
include/Inari/ECS/Systems/: SpriteRenderSystem.h
include/Inari/Graphics/: Renderer.h  SpriteBatch.h  Window.h
include/Inari/Utils/: Camera2D.h
src/: BaseGame.cpp  CMakeLists.txt  GameServices.cpp  InputManager.cpp
src/Assets/: AssetsManager.cpp  CMakeLists.txt  Shader.cpp  ShaderMaker.cpp  Texture2D.cpp  Texture2DMaker.cpp  World.cpp  WorldMaker.cpp
src/ECS/: CMakeLists.txt  EntityRegistry.cpp  SystemRegistry.cpp
src/ECS/Systems/: AnimationSystem.cpp  CMakeLists.txt  PhysicsSystem.cpp  SpriteRenderSystem.cpp
src/Graphics/: CMakeLists.txt  Renderer.cpp  SpriteBatch.cpp  VertexLayout.cpp  Window.cpp
src/Utils/: CMakeLists.txt  Camera2D.cpp  GameTime.cpp
